# swagger_server/models/__init__.py
@@ -3,8 +3,10 @@
 # flake8: noqa
 from __future__ import absolute_import
 # import models into model package
+from swagger_server.models.domicilio import Domicilio
 from swagger_server.models.error import Error
 from swagger_server.models.error_detail import ErrorDetail
+from swagger_server.models.horario import Horario
 from swagger_server.models.inline_response200 import InlineResponse200
 from swagger_server.models.inline_response200_paginacion import InlineResponse200Paginacion
 from swagger_server.models.negocio import Negocio
