# swagger_server/models/domicilio.py
@@ -1,0 +1,286 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class Domicilio(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, domicilio_id: int=None, pais: str=None, estado: str=None, ciudad: str=None, municipio: str=None, calle: str=None, numero_interior: str=None, numero_exterior: str=None, colonia: str=None):  # noqa: E501
+        """Domicilio - a model defined in Swagger
+
+        :param domicilio_id: The domicilio_id of this Domicilio.  # noqa: E501
+        :type domicilio_id: int
+        :param pais: The pais of this Domicilio.  # noqa: E501
+        :type pais: str
+        :param estado: The estado of this Domicilio.  # noqa: E501
+        :type estado: str
+        :param ciudad: The ciudad of this Domicilio.  # noqa: E501
+        :type ciudad: str
+        :param municipio: The municipio of this Domicilio.  # noqa: E501
+        :type municipio: str
+        :param calle: The calle of this Domicilio.  # noqa: E501
+        :type calle: str
+        :param numero_interior: The numero_interior of this Domicilio.  # noqa: E501
+        :type numero_interior: str
+        :param numero_exterior: The numero_exterior of this Domicilio.  # noqa: E501
+        :type numero_exterior: str
+        :param colonia: The colonia of this Domicilio.  # noqa: E501
+        :type colonia: str
+        """
+        self.swagger_types = {
+            'domicilio_id': int,
+            'pais': str,
+            'estado': str,
+            'ciudad': str,
+            'municipio': str,
+            'calle': str,
+            'numero_interior': str,
+            'numero_exterior': str,
+            'colonia': str
+        }
+
+        self.attribute_map = {
+            'domicilio_id': 'domicilioId',
+            'pais': 'pais',
+            'estado': 'estado',
+            'ciudad': 'ciudad',
+            'municipio': 'municipio',
+            'calle': 'calle',
+            'numero_interior': 'numeroInterior',
+            'numero_exterior': 'numeroExterior',
+            'colonia': 'colonia'
+        }
+        self._domicilio_id = domicilio_id
+        self._pais = pais
+        self._estado = estado
+        self._ciudad = ciudad
+        self._municipio = municipio
+        self._calle = calle
+        self._numero_interior = numero_interior
+        self._numero_exterior = numero_exterior
+        self._colonia = colonia
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'Domicilio':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The domicilio of this Domicilio.  # noqa: E501
+        :rtype: Domicilio
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def domicilio_id(self) -> int:
+        """Gets the domicilio_id of this Domicilio.
+
+
+        :return: The domicilio_id of this Domicilio.
+        :rtype: int
+        """
+        return self._domicilio_id
+
+    @domicilio_id.setter
+    def domicilio_id(self, domicilio_id: int):
+        """Sets the domicilio_id of this Domicilio.
+
+
+        :param domicilio_id: The domicilio_id of this Domicilio.
+        :type domicilio_id: int
+        """
+
+        self._domicilio_id = domicilio_id
+
+    @property
+    def pais(self) -> str:
+        """Gets the pais of this Domicilio.
+
+        El nombre del **pais** del usuario  # noqa: E501
+
+        :return: The pais of this Domicilio.
+        :rtype: str
+        """
+        return self._pais
+
+    @pais.setter
+    def pais(self, pais: str):
+        """Sets the pais of this Domicilio.
+
+        El nombre del **pais** del usuario  # noqa: E501
+
+        :param pais: The pais of this Domicilio.
+        :type pais: str
+        """
+
+        self._pais = pais
+
+    @property
+    def estado(self) -> str:
+        """Gets the estado of this Domicilio.
+
+        El nombre del **estado** dentro del país en donde se encuentra el usuario  # noqa: E501
+
+        :return: The estado of this Domicilio.
+        :rtype: str
+        """
+        return self._estado
+
+    @estado.setter
+    def estado(self, estado: str):
+        """Sets the estado of this Domicilio.
+
+        El nombre del **estado** dentro del país en donde se encuentra el usuario  # noqa: E501
+
+        :param estado: The estado of this Domicilio.
+        :type estado: str
+        """
+
+        self._estado = estado
+
+    @property
+    def ciudad(self) -> str:
+        """Gets the ciudad of this Domicilio.
+
+        El nombre de la **ciudad** en donde se encuentra el usuario  # noqa: E501
+
+        :return: The ciudad of this Domicilio.
+        :rtype: str
+        """
+        return self._ciudad
+
+    @ciudad.setter
+    def ciudad(self, ciudad: str):
+        """Sets the ciudad of this Domicilio.
+
+        El nombre de la **ciudad** en donde se encuentra el usuario  # noqa: E501
+
+        :param ciudad: The ciudad of this Domicilio.
+        :type ciudad: str
+        """
+
+        self._ciudad = ciudad
+
+    @property
+    def municipio(self) -> str:
+        """Gets the municipio of this Domicilio.
+
+        El nombre del **municipio** en donde se encuentra el usuario  # noqa: E501
+
+        :return: The municipio of this Domicilio.
+        :rtype: str
+        """
+        return self._municipio
+
+    @municipio.setter
+    def municipio(self, municipio: str):
+        """Sets the municipio of this Domicilio.
+
+        El nombre del **municipio** en donde se encuentra el usuario  # noqa: E501
+
+        :param municipio: The municipio of this Domicilio.
+        :type municipio: str
+        """
+
+        self._municipio = municipio
+
+    @property
+    def calle(self) -> str:
+        """Gets the calle of this Domicilio.
+
+        La **calle** del usuario  # noqa: E501
+
+        :return: The calle of this Domicilio.
+        :rtype: str
+        """
+        return self._calle
+
+    @calle.setter
+    def calle(self, calle: str):
+        """Sets the calle of this Domicilio.
+
+        La **calle** del usuario  # noqa: E501
+
+        :param calle: The calle of this Domicilio.
+        :type calle: str
+        """
+
+        self._calle = calle
+
+    @property
+    def numero_interior(self) -> str:
+        """Gets the numero_interior of this Domicilio.
+
+        El **numeroInterior** del usuario  # noqa: E501
+
+        :return: The numero_interior of this Domicilio.
+        :rtype: str
+        """
+        return self._numero_interior
+
+    @numero_interior.setter
+    def numero_interior(self, numero_interior: str):
+        """Sets the numero_interior of this Domicilio.
+
+        El **numeroInterior** del usuario  # noqa: E501
+
+        :param numero_interior: The numero_interior of this Domicilio.
+        :type numero_interior: str
+        """
+
+        self._numero_interior = numero_interior
+
+    @property
+    def numero_exterior(self) -> str:
+        """Gets the numero_exterior of this Domicilio.
+
+        El **numeroExterior** del usuario  # noqa: E501
+
+        :return: The numero_exterior of this Domicilio.
+        :rtype: str
+        """
+        return self._numero_exterior
+
+    @numero_exterior.setter
+    def numero_exterior(self, numero_exterior: str):
+        """Sets the numero_exterior of this Domicilio.
+
+        El **numeroExterior** del usuario  # noqa: E501
+
+        :param numero_exterior: The numero_exterior of this Domicilio.
+        :type numero_exterior: str
+        """
+
+        self._numero_exterior = numero_exterior
+
+    @property
+    def colonia(self) -> str:
+        """Gets the colonia of this Domicilio.
+
+        La **coloina** del usuario  # noqa: E501
+
+        :return: The colonia of this Domicilio.
+        :rtype: str
+        """
+        return self._colonia
+
+    @colonia.setter
+    def colonia(self, colonia: str):
+        """Sets the colonia of this Domicilio.
+
+        La **coloina** del usuario  # noqa: E501
+
+        :param colonia: The colonia of this Domicilio.
+        :type colonia: str
+        """
+
+        self._colonia = colonia
