# swagger_server/models/horario.py
@@ -1,0 +1,140 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class Horario(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, horario_id: int=None, dia: str=None, horario_apertura: str=None, horario_cierre: str=None):  # noqa: E501
+        """Horario - a model defined in Swagger
+
+        :param horario_id: The horario_id of this Horario.  # noqa: E501
+        :type horario_id: int
+        :param dia: The dia of this Horario.  # noqa: E501
+        :type dia: str
+        :param horario_apertura: The horario_apertura of this Horario.  # noqa: E501
+        :type horario_apertura: str
+        :param horario_cierre: The horario_cierre of this Horario.  # noqa: E501
+        :type horario_cierre: str
+        """
+        self.swagger_types = {
+            'horario_id': int,
+            'dia': str,
+            'horario_apertura': str,
+            'horario_cierre': str
+        }
+
+        self.attribute_map = {
+            'horario_id': 'horarioId',
+            'dia': 'dia',
+            'horario_apertura': 'horarioApertura',
+            'horario_cierre': 'horarioCierre'
+        }
+        self._horario_id = horario_id
+        self._dia = dia
+        self._horario_apertura = horario_apertura
+        self._horario_cierre = horario_cierre
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'Horario':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The horario of this Horario.  # noqa: E501
+        :rtype: Horario
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def horario_id(self) -> int:
+        """Gets the horario_id of this Horario.
+
+
+        :return: The horario_id of this Horario.
+        :rtype: int
+        """
+        return self._horario_id
+
+    @horario_id.setter
+    def horario_id(self, horario_id: int):
+        """Sets the horario_id of this Horario.
+
+
+        :param horario_id: The horario_id of this Horario.
+        :type horario_id: int
+        """
+
+        self._horario_id = horario_id
+
+    @property
+    def dia(self) -> str:
+        """Gets the dia of this Horario.
+
+
+        :return: The dia of this Horario.
+        :rtype: str
+        """
+        return self._dia
+
+    @dia.setter
+    def dia(self, dia: str):
+        """Sets the dia of this Horario.
+
+
+        :param dia: The dia of this Horario.
+        :type dia: str
+        """
+
+        self._dia = dia
+
+    @property
+    def horario_apertura(self) -> str:
+        """Gets the horario_apertura of this Horario.
+
+
+        :return: The horario_apertura of this Horario.
+        :rtype: str
+        """
+        return self._horario_apertura
+
+    @horario_apertura.setter
+    def horario_apertura(self, horario_apertura: str):
+        """Sets the horario_apertura of this Horario.
+
+
+        :param horario_apertura: The horario_apertura of this Horario.
+        :type horario_apertura: str
+        """
+
+        self._horario_apertura = horario_apertura
+
+    @property
+    def horario_cierre(self) -> str:
+        """Gets the horario_cierre of this Horario.
+
+
+        :return: The horario_cierre of this Horario.
+        :rtype: str
+        """
+        return self._horario_cierre
+
+    @horario_cierre.setter
+    def horario_cierre(self, horario_cierre: str):
+        """Sets the horario_cierre of this Horario.
+
+
+        :param horario_cierre: The horario_cierre of this Horario.
+        :type horario_cierre: str
+        """
+
+        self._horario_cierre = horario_cierre
